添加了markdown处理器

--- a/笔记.md
+++ b/笔记.md
@@ -34,3 +34,45 @@
 
 
 
+## 解析mark-down
+
+1. `yarn add react-markdown`
+
+2. 安装插件 `yarn add react-syntax-highlighter` (支持高亮) 和 `yarn add remark-gfm`支持表格
+
+   用法详见github
+
+   ~~~js
+   const markdown = `Here is some JavaScript code:
+   
+     ~~~js
+     console.log('It works!')
+     ~~~
+     `
+     const renderers = {
+       code: ({language, value}) => {
+         return <SyntaxHighlighter style={dark} language={language} children={value} />
+       }
+     }
+     return(
+     	<div>
+       	<ReactMarkdown renderers={renderers} plugins={[gfm]}>
+               {markdown}
+   		</ReactMarkdown>  
+       </div>    
+     )
+   ~~~
+
+3. `yarn add markdown-navbar` 导航栏组件
+
+   ~~~js
+   import MarkNav from 'markdown-navbar'
+   <MarkNav
+       className={style.articleMenu}
+       source={markdown}
+       headingTopOffset={0} // 默认是0
+       ordered={false}
+   />
+   ~~~
+
+   
