--- a/笔记.md
+++ b/笔记.md
@@ -34,7 +34,7 @@
 
 
 
-## 解析mark-down
+## 解析mark-down方法一
 
 1. `yarn add react-markdown`
 
@@ -47,7 +47,7 @@
    
      ~~~js
      console.log('It works!')
-     ~~~
+   ~~~
      `
      const renderers = {
        code: ({language, value}) => {
@@ -61,6 +61,9 @@
    		</ReactMarkdown>  
        </div>    
      )
+
+   ~~~
+   
    ~~~
 
 3. `yarn add markdown-navbar` 导航栏组件
@@ -76,3 +79,159 @@
    ~~~
 
    
+
+## 解析mark-down方法二
+
+- marked+highlight.js
+
+1. `yarn add marked` `yarn add highlight.js`
+
+2. ~~~js
+   import marked from 'marked'
+   import hljs from 'highlight.js'
+   import 'highlight.js/styles/monokai-sublime.css'
+   const renderer = new marked.Renderer()
+   
+   marked.setOptions({
+     	renderer:renderer,
+       gfm:true, // 是否使用github标准解析markdown
+       pedantic:false, // 是否开启markdown的严格模式
+       sanitize:false, // 是否忽略HTML标签
+       tables:true, // 是否解析表格（根据github标准，同时gfm必须为true
+       breaks:false, // 是否支持github换行符
+       smartLists:true, // 是否自动渲染列表
+       highlight:function(code){ // 如何进行代码高亮
+           return hljs.highlightAuto(code).value
+       }
+   })
+   
+   let html = marked(props.article_content) // 传入markdown内容
+   ~~~
+
+3. ~~~html
+   <div className={style.detailedContent}
+   	dangerouslySetInnerHTML={{__html:html}}
+   >
+   	{html}
+   </div>
+   ~~~
+
+4. tocify导航
+
+   使用前提：
+
+   -  使用了`Ant Design`UI库 
+   -  安装`lodash`模块
+
+    
+
+   文件内容
+   
+   ~~~js
+   import React from 'react';
+   import { Anchor } from 'antd';
+   import { last } from 'lodash';
+   
+   const { Link } = Anchor;
+   
+   export interface TocItem {
+     anchor: string;
+     level: number;
+     text: string;
+     children?: TocItem[];
+   }
+   
+   export type TocItems = TocItem[]; // TOC目录树结构
+   
+   export default class Tocify {
+     tocItems: TocItems = [];
+   
+     index: number = 0;
+   
+     constructor() {
+       this.tocItems = [];
+       this.index = 0;
+     }
+   
+     add(text: string, level: number) {
+       const anchor = `toc${level}${++this.index}`;
+       const item = { anchor, level, text };
+       const items = this.tocItems;
+   
+       if (items.length === 0) { // 第一个 item 直接 push
+         items.push(item);
+       } else {
+         let lastItem = last(items) as TocItem; // 最后一个 item
+   
+         if (item.level > lastItem.level) { // item 是 lastItem 的 children
+           for (let i = lastItem.level + 1; i <= 2; i++) {
+             const { children } = lastItem;
+             if (!children) { // 如果 children 不存在
+               lastItem.children = [item];
+               break;
+             }
+   
+             lastItem = last(children) as TocItem; // 重置 lastItem 为 children 的最后一个 item
+   
+             if (item.level <= lastItem.level) { // item level 小于或等于 lastItem level 都视为与 children 同级
+               children.push(item);
+               break;
+             }
+           }
+         } else { // 置于最顶级
+           items.push(item);
+         }
+       }
+   
+       return anchor;
+     }
+   
+     reset = () => {
+       this.tocItems = [];
+       this.index = 0;
+     };
+   
+     renderToc(items: TocItem[]) { // 递归 render
+       return items.map(item => (
+         <Link key={item.anchor} href={`#${item.anchor}`} title={item.text}>
+           {item.children && this.renderToc(item.children)}
+         </Link>
+       ));
+     }
+   
+     render() {
+       return (
+         <Anchor affix showInkInFixed>
+            {this.renderToc(this.tocItems)}
+         </Anchor>
+       );
+     }
+}
+   ~~~
+
+   使用方法
+   
+   ~~~js
+   import Tocify from '../components/tocify.tsx';
+   
+   function Detailed(props) {
+     const tocify = new Tocify()
+     const renderer = new marked.Renderer()
+   
+      renderer.heading = function(text, level, raw) {
+       const anchor = tocify.add(text, level);
+       return `<a id="${anchor}" href="#${anchor}" class="anchor-fix"><h${level}>${text}</h${level}></a>\n`;
+     };
+       。。。。。
+       <div className={style.navTitle}>文章目录</div>
+       {
+           tocify && tocify.render()
+       }
+       </div>
+}
+   ~~~
+   
+   
+
+
+
